# ps3mca-ps1

./: CMakeLists.txt  README.md
MS64/static/: libusb-1.0.lib
cmake_modules/: FindLibUSB.cmake
src/: main.c
